@@ -14,9 +14,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
-import javax.inject.Inject;
-import javax.validation.Validator;
-
 import com.bakdata.conquery.apiv1.IdLabel;
 import com.bakdata.conquery.apiv1.frontend.FrontendList;
 import com.bakdata.conquery.apiv1.frontend.FrontendPreviewConfig;
@@ -25,6 +22,7 @@ import com.bakdata.conquery.apiv1.frontend.FrontendValue;
 import com.bakdata.conquery.io.storage.NamespaceStorage;
 import com.bakdata.conquery.models.auth.entities.Subject;
 import com.bakdata.conquery.models.auth.permissions.Ability;
+import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
 import com.bakdata.conquery.models.datasets.PreviewConfig;
 import com.bakdata.conquery.models.datasets.concepts.Concept;
@@ -37,25 +35,22 @@ import com.bakdata.conquery.models.exceptions.ValidatorHelper;
 import com.bakdata.conquery.models.identifiable.ids.specific.ConceptElementId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ConnectorId;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
-import com.bakdata.conquery.models.identifiable.ids.specific.FilterId;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.CalculatedValue;
 import com.bakdata.conquery.util.search.Cursor;
 import com.bakdata.conquery.util.search.TrieSearch;
-import com.fasterxml.jackson.annotation.JsonCreator;
 import com.google.common.base.Preconditions;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.Iterators;
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import it.unimi.dsi.fastutil.objects.Object2LongMap;
+import it.unimi.dsi.fastutil.objects.Object2LongOpenHashMap;
+import jakarta.inject.Inject;
+import jakarta.validation.Validator;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import lombok.Setter;
-import lombok.ToString;
-import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.tuple.Pair;
 
@@ -64,14 +59,19 @@ import org.apache.commons.lang3.tuple.Pair;
 @RequiredArgsConstructor(onConstructor_ = {@Inject})
 public class ConceptsProcessor {
 
-	private final DatasetRegistry namespaces;
+	private final DatasetRegistry<? extends Namespace> namespaces;
 	private final Validator validator;
+
+	private final ConqueryConfig config;
+
+	@Getter(lazy = true)
+	private final FrontEndConceptBuilder frontEndConceptBuilder = new FrontEndConceptBuilder(getConfig());
 
 	private final LoadingCache<Concept<?>, FrontendList> nodeCache =
 			CacheBuilder.newBuilder().softValues().expireAfterWrite(10, TimeUnit.MINUTES).build(new CacheLoader<>() {
 				@Override
 				public FrontendList load(Concept<?> concept) {
-					return FrontEndConceptBuilder.createTreeMap(concept);
+					return getFrontEndConceptBuilder().createTreeMap(concept);
 				}
 			});
 
@@ -84,43 +84,31 @@ public class ConceptsProcessor {
 
 				@Override
 				public List<FrontendValue> load(Pair<SelectFilter<?>, String> filterAndSearch) {
-					String searchTerm = filterAndSearch.getValue();
-					SelectFilter<?> filter = filterAndSearch.getKey();
+					final String searchTerm = filterAndSearch.getValue();
+					final SelectFilter<?> searchable = filterAndSearch.getKey();
 
-					log.trace("Calculating a new search cache for the term \"{}\" on filter[{}]", searchTerm, filter.getId());
+					log.trace("Calculating a new search cache for the term \"{}\" on Searchable[{}]", searchTerm, searchable.getId());
 
-					return autocompleteTextFilter(filter, searchTerm);
+					return autocompleteTextFilter(searchable, searchTerm);
 				}
 
-	});
-
-
-	/**
-	 * Container class to pair number of available values and Cursor for those values.
-	 */
-	@Value
-	private static class CursorAndLength {
-		private final Cursor<FrontendValue> values;
-		private final long size;
-	}
-
+			});
 	/**
 	 * Cache of raw listing of values on a filter.
 	 * We use Cursor here to reduce strain on memory and increase response time.
 	 */
 	private final LoadingCache<SelectFilter<?>, CursorAndLength> listResults = CacheBuilder.newBuilder().softValues().build(new CacheLoader<>() {
 		@Override
-		public CursorAndLength load(SelectFilter<?> filter) {
-			log.debug("Creating cursor for `{}`", filter.getId());
-			return new CursorAndLength(listAllValues(filter), countAllValues(filter));
+		public CursorAndLength load(SelectFilter<?> searchable) {
+			log.trace("Creating cursor for `{}`", searchable.getId());
+			return new CursorAndLength(listAllValues(searchable), countAllValues(searchable));
 		}
 
 	});
 
-
 	public FrontendRoot getRoot(NamespaceStorage storage, Subject subject) {
 
-		final FrontendRoot root = FrontEndConceptBuilder.createRoot(storage, subject);
+		final FrontendRoot root = getFrontEndConceptBuilder().createRoot(storage, subject);
 
 		// Report Violation
 		ValidatorHelper.createViolationsString(validator.validate(root), log.isTraceEnabled()).ifPresent(log::warn);
@@ -146,7 +134,6 @@ public class ConceptsProcessor {
 						 .collect(Collectors.toList());
 	}
 
-
 	public FrontendPreviewConfig getEntityPreviewFrontendConfig(Dataset dataset) {
 		final Namespace namespace = namespaces.get(dataset.getId());
 		final PreviewConfig previewConfig = namespace.getPreviewConfig();
@@ -163,7 +150,8 @@ public class ConceptsProcessor {
 							 .stream()
 							 .map(id -> new FrontendPreviewConfig.Labelled(id.toString(), namespace.getCentralRegistry().resolve(id).getTable().getLabel()))
 							 .collect(Collectors.toSet()),
-				previewConfig.getSearchConcept()
+				previewConfig.resolveSearchFilters(),
+				previewConfig.resolveSearchConcept()
 		);
 	}
 
@@ -171,17 +159,17 @@ public class ConceptsProcessor {
 	 * Search for all search terms at once, with stricter scoring.
 	 * The user will upload a file and expect only well-corresponding resolutions.
 	 */
-	public ResolvedConceptsResult resolveFilterValues(SelectFilter<?> filter, List<String> searchTerms) {
+	public ResolvedFilterValues resolveFilterValues(SelectFilter<?> searchable, List<String> searchTerms) {
 
 		// search in the full text engine
 		final Set<String> openSearchTerms = new HashSet<>(searchTerms);
 
-		final Namespace namespace = namespaces.get(filter.getDataset().getId());
+		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
 
 		final List<FrontendValue> out = new ArrayList<>();
 
-		for (TrieSearch<FrontendValue> search : namespace.getFilterSearch().getSearchesFor(filter)) {
-			for (Iterator<String> iterator = openSearchTerms.iterator(); iterator.hasNext(); ) {
+		for (TrieSearch<FrontendValue> search : namespace.getFilterSearch().getSearchesFor(searchable)) {
+			for (final Iterator<String> iterator = openSearchTerms.iterator(); iterator.hasNext(); ) {
 
 				final String searchTerm = iterator.next();
 				final List<FrontendValue> results = search.findExact(List.of(searchTerm), Integer.MAX_VALUE);
@@ -195,24 +183,24 @@ public class ConceptsProcessor {
 			}
 		}
 
-		return new ResolvedConceptsResult(null, new ResolvedFilterResult(filter.getConnector().getId(), filter.getId(), out), openSearchTerms);
+		final ConnectorId connectorId = searchable.getConnector().getId();
+
+		return new ResolvedFilterValues(new ResolvedFilterResult(connectorId, searchable.getId().toString(), out), openSearchTerms);
 	}
 
-	@Data
-	@RequiredArgsConstructor(onConstructor_ = {@JsonCreator})
-	public static class AutoCompleteResult {
-		private final List<FrontendValue> values;
-		private final long total;
-	}
-
-	public AutoCompleteResult autocompleteTextFilter(SelectFilter<?> filter, Optional<String> maybeText, OptionalInt pageNumberOpt, OptionalInt itemsPerPageOpt) {
+	public AutoCompleteResult autocompleteTextFilter(
+			SelectFilter<?> searchable,
+			Optional<String> maybeText,
+			OptionalInt pageNumberOpt,
+			OptionalInt itemsPerPageOpt
+	) {
 		final int pageNumber = pageNumberOpt.orElse(0);
 		final int itemsPerPage = itemsPerPageOpt.orElse(50);
 
 		Preconditions.checkArgument(pageNumber >= 0, "Page number must be 0 or a positive integer.");
 		Preconditions.checkArgument(itemsPerPage > 1, "Must at least have one item per page.");
 
-		log.trace("Searching for for  `{}` in `{}`. (Page = {}, Items = {})", maybeText, filter.getId(), pageNumber, itemsPerPage);
+		log.trace("Searching for for  `{}` in `{}`. (Page = {}, Items = {})", maybeText, searchable.getId(), pageNumber, itemsPerPage);
 
 		final int startIncl = itemsPerPage * pageNumber;
 		final int endExcl = startIncl + itemsPerPage;
@@ -221,13 +209,13 @@ public class ConceptsProcessor {
 
 			// If we have none or a blank query string we list all values.
 			if (maybeText.isEmpty() || maybeText.get().isBlank()) {
-				final CursorAndLength cursorAndLength = listResults.get(filter);
-				final Cursor<FrontendValue> cursor = cursorAndLength.getValues();
+				final CursorAndLength cursorAndLength = listResults.get(searchable);
+				final Cursor<FrontendValue> cursor = cursorAndLength.values();
 
-				return new AutoCompleteResult(cursor.get(startIncl, endExcl), cursorAndLength.getSize());
+				return new AutoCompleteResult(cursor.get(startIncl, endExcl), cursorAndLength.size());
 			}
 
-			final List<FrontendValue> fullResult = searchResults.get(Pair.of(filter, maybeText.get()));
+			final List<FrontendValue> fullResult = searchResults.get(Pair.of(searchable, maybeText.get()));
 
 			if (startIncl >= fullResult.size()) {
 				return new AutoCompleteResult(Collections.emptyList(), fullResult.size());
@@ -236,14 +224,13 @@ public class ConceptsProcessor {
 			return new AutoCompleteResult(fullResult.subList(startIncl, Math.min(fullResult.size(), endExcl)), fullResult.size());
 		}
 		catch (ExecutionException e) {
-			log.warn("Failed to search for \"{}\".", maybeText, (Throwable) (log.isTraceEnabled() ? e : null));
+			log.warn("Failed to search for \"{}\".", maybeText, (Exception) (log.isTraceEnabled() ? e : null));
 			return new AutoCompleteResult(Collections.emptyList(), 0);
 		}
 	}
 
-
-	private Cursor<FrontendValue> listAllValues(SelectFilter<?> filter) {
-		final Namespace namespace = namespaces.get(filter.getDataset().getId());
+	private Cursor<FrontendValue> listAllValues(SelectFilter<?> searchable) {
+		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
 		/*
 		Don't worry, I am as confused as you are!
 		For some reason, flatMapped streams in conjunction with distinct will be evaluated full before further operation.
@@ -252,9 +239,14 @@ public class ConceptsProcessor {
 		See: https://stackoverflow.com/questions/61114380/java-streams-buffering-huge-streams
 		 */
 
-		final Iterator<FrontendValue>
-				iterators =
-				Iterators.concat(Iterators.transform(namespace.getFilterSearch().getSearchesFor(filter).iterator(), TrieSearch::iterator));
+		final List<TrieSearch<FrontendValue>> searches = namespace.getFilterSearch().getSearchesFor(searchable);
+
+		final Iterator<FrontendValue> iterators =
+				Iterators.concat(
+						// We are always leading with the empty value.
+						Iterators.singletonIterator(new FrontendValue("", config.getIndex().getEmptyLabel())),
+						Iterators.concat(Iterators.transform(searches.iterator(), TrieSearch::iterator))
+				);
 
 		// Use Set to accomplish distinct values
 		final Set<FrontendValue> seen = new HashSet<>();
@@ -262,53 +254,37 @@ public class ConceptsProcessor {
 		return new Cursor<>(Iterators.filter(iterators, seen::add));
 	}
 
-	private long countAllValues(SelectFilter<?> filter) {
-		final Namespace namespace = namespaces.get(filter.getDataset().getId());
+	private int countAllValues(SelectFilter<?> searchable) {
+		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
 
-
-		return namespace.getFilterSearch().getTotal(filter);
+		return namespace.getFilterSearch().getTotal(searchable);
 	}
 
 	/**
 	 * Autocompletion for search terms. For values of {@link SelectFilter <?>}.
 	 * Is used by the serach cache to load missing items
 	 */
-	private List<FrontendValue> autocompleteTextFilter(SelectFilter<?> filter, String text) {
-		final Namespace namespace = namespaces.get(filter.getDataset().getId());
+	private List<FrontendValue> autocompleteTextFilter(SelectFilter<?> searchable, String text) {
+		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
 
 		// Note that FEValues is equals/hashcode only on value:
-		// The different sources might contain duplicate FEValue#values which we want to avoid as
-		// they are already sorted in terms of information weight by getSearchesFor
+		// The different sources might contain duplicate FEValue#values which we exploit:
+		// If a value is already present, it's from a search with higher priority.
 
-		// Also note: currently we are still issuing large search requests, but much smaller allocations at once, and querying only when the past is not sufficient
-		return namespace.getFilterSearch()
-						.getSearchesFor(filter)
-						.stream()
-						.map(search -> createSourceSearchResult(search, Collections.singletonList(text), OptionalInt.empty()))
-						.flatMap(Collection::stream)
-						.distinct()
-						.collect(Collectors.toList());
+		final List<TrieSearch<FrontendValue>> searches = namespace.getFilterSearch().getSearchesFor(searchable);
 
+		final Object2LongMap<FrontendValue> overlayedWeights = new Object2LongOpenHashMap<>();
 
-	}
+		for (TrieSearch<FrontendValue> search : searches) {
 
-	/**
-	 * Do a search with the supplied values.
-	 */
-	private static List<FrontendValue> createSourceSearchResult(TrieSearch<FrontendValue> search, Collection<String> values, OptionalInt numberOfTopItems) {
-		if (search == null) {
-			return Collections.emptyList();
+			final Object2LongMap<FrontendValue> itemWeights = search.collectWeights(List.of(text));
+
+			itemWeights.forEach(overlayedWeights::putIfAbsent);
 		}
 
-		// Quicksearch can split and also schedule for us.
-		List<FrontendValue> result = search.findItems(values, numberOfTopItems.orElse(Integer.MAX_VALUE));
+		return TrieSearch.topItems(Integer.MAX_VALUE, overlayedWeights);
 
-		if (numberOfTopItems.isEmpty() && result.size() == Integer.MAX_VALUE) {
-			//TODO This looks odd, do we really expect QuickSearch to allocate that huge of a list for us?
-			log.warn("The quick search returned the maximum number of results ({}) which probably means not all possible results are returned.", Integer.MAX_VALUE);
-		}
 
-		return result;
 	}
 
 	public ResolvedConceptsResult resolveConceptElements(TreeConcept concept, List<String> conceptCodes) {
@@ -318,7 +294,7 @@ public class ConceptsProcessor {
 
 		for (String conceptCode : conceptCodes) {
 			try {
-				ConceptTreeChild child = concept.findMostSpecificChild(conceptCode, new CalculatedValue<>(Collections::emptyMap));
+				final ConceptTreeChild child = concept.findMostSpecificChild(conceptCode, new CalculatedValue<>(Collections::emptyMap));
 
 				if (child != null) {
 					resolvedCodes.add(child.getId());
@@ -328,29 +304,29 @@ public class ConceptsProcessor {
 				}
 			}
 			catch (ConceptConfigurationException e) {
-				log.error("Error while trying to resolve " + conceptCode, e);
+				log.error("Error while trying to resolve `{}`", conceptCode, e);
 			}
 		}
-		return new ResolvedConceptsResult(resolvedCodes, null, unknownCodes);
+		return new ResolvedConceptsResult(resolvedCodes,  unknownCodes);
 	}
 
-	@Getter
-	@Setter
-	@AllArgsConstructor
-	@ToString
-	public static class ResolvedFilterResult {
-		private ConnectorId tableId;
-		private FilterId filterId;
-		private Collection<FrontendValue> value;
+	/**
+	 * Container class to pair number of available values and Cursor for those values.
+	 */
+	private record CursorAndLength(Cursor<FrontendValue> values, int size) {
 	}
 
-	@Getter
-	@Setter
-	@AllArgsConstructor
-	@ToString
-	public static class ResolvedConceptsResult {
-		private Set<ConceptElementId<?>> resolvedConcepts;
-		private ResolvedFilterResult resolvedFilter;
-		private Collection<String> unknownCodes;
+	public record AutoCompleteResult(List<FrontendValue> values, int total) {
+	}
+
+	public record ResolvedFilterResult(ConnectorId tableId, String filterId, Collection<FrontendValue> value) {
+		//TODO FK filterId as Id causes issues with IdUtil createParser, should investigate this
+	}
+
+	public record ResolvedFilterValues(ResolvedFilterResult resolvedFilter, Collection<String> unknownCodes) {
+
+	}
+
+	public record ResolvedConceptsResult(Set<ConceptElementId<?>> resolvedConcepts, Collection<String> unknownCodes) {
 	}
 }
